--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ header {
     text-shadow: 0 0 30px white;
 }
 
+/*Jedi Button*/
+
 .nav-jedi {
     grid-column: 1;
     font-size: 5rem;
@@ -76,6 +78,8 @@ header {
     transition: 250ms;
     text-shadow: 0 0 30px white;
 }
+
+/*Sith Button*/
 
 .nav-sith {
     grid-column: 3;
@@ -129,12 +133,119 @@ header {
     transition: 1000ms;
 }
 
+/*Section with the lists*/
+
+.intro-section {
+    min-height: 850px;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+   
+}
+
+.list-visible {
+    position: relative;
+    min-width: 400px;
+    min-height: 600px;
+    max-height: 600px;
+    background-color: grey; 
+    border-radius: 5px; 
+    overflow-x: hidden;
+    font-family: 'Bebas Neue';
+    font-size: 1.2rem;
+    color: rgba(255, 228, 0, 1);
+    opacity: 1;
+    transition-duration: 1.5s;
+    margin: 0;
+}
+
+.list {
+    min-width: 400px;
+    min-height: 600px;
+    max-height: 600px;
+    background-color: grey; 
+    border-radius: 5px; 
+    overflow-x: hidden;
+    font-family: 'Bebas Neue';
+    font-size: 1.2rem;
+    color: rgba(255, 228, 0, 1);
+    transition-duration: 1.5s; 
+    opacity: 0;
+}
+
+.list-visible > ul {
+    list-style: none;
+    padding-left: 5px;
+}
+
+.list > ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.list-visible > ul li:hover {
+    cursor: pointer;
+    background-color: darkgrey;
+}
+
+.li-clicked {
+    background-color: darkgrey;
+}
+
+/*Button panel section*/
+
+.button-panel {
+    position: relative;
+    z-index: 200;
+    width: 400px;
+    height: 40px;
+    text-align: center;
+    margin-top: -250px;
+    background-color: grey;
+    border-radius: 5px;
+    opacity: 1;
+    transition-duration: 1.5s; 
+}
+
+.button-panel-hidden {
+    position: relative;
+    z-index: 200;
+    width: 400px;
+    height: 40px;
+    text-align: center;
+    margin-top: -250px;
+    background-color: grey;
+    border-radius: 5px;
+    opacity: 0;
+}
+
+.button-panel > button {
+    width: 130px;
+    height: 40px;
+    color: rgba(255, 228, 0, 1);
+    background-color: grey;
+    border-style: none;
+    border-radius: 5px;
+    font-family: 'Bebas Neue';
+    font-size: 1.2rem;
+}
+
+.button-panel > button:hover {
+    cursor: pointer;
+    background-color: darkgrey;
+}
+
+
+
 /*Star wars text section*/
 
 .intro-section {
     margin: 0;
     height: 100%;
-    opacity: 0.1;
     display: grid;
     grid-template-columns: 3;
     grid-template-rows: 3;
